hphp/hack/test/typecheck/shape_idx_generic1.php.exp
File "shape_idx_generic1.php", line 5, characters 10-32:
Invalid return type (Typing[4110])
File "shape_idx_generic1.php", line 4, characters 52-54:
Expected int
File "shape_idx_generic1.php", line 4, characters 33-36:
But got ?int
